--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
           ls -a
       - name: Checkout
         uses: actions/checkout@v1
-      - name: List Files
+      - name: List Files After Checkout
         run: |
           pwd
           ls -a
