--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,3 +29,4 @@ jobs:
           who-to-greet: Richard
       - name: Log Greeting Time
         run: echo "${{ steps.greet.outputs.time }}"
+# coment added
