--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -18,7 +18,7 @@ jobs:
             is_ubuntu_8: "true"
     runs-on: ${{ matrix.os }}
     env:
-      IS_UBUNTU_8: ${{ is_ubuntu_8 }}
+      IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
     steps:
       - name: Log node version
         run: node -v
