--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,6 +15,6 @@ jobs:
           - "27017:27017"
     steps:
       - name: Post a user
-        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"hello\", \"address\": \"123 main st\""
+        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"hello\", \"address\": \"123 main st\"'"
       - name: Get users
         run: "curl http://localhost:3001/api/users"
