--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           entrypoint: '/usr/local/bin/node'
           args: -v
+      - uses: actions/checkout@v1
+      - name: Run script
+        uses: docker://node:12.14.0-alpine3.10
+        with:
+          entrypoint: ./script.sh
+          args: "Some string"
   node-docker:
     runs-on: ubuntu-latest
     services:
