--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,7 +1,7 @@
 name: ENV Variables
 on: push
 env:
-  WF_ENV: Available to all jobs${{ secrets.PASSPHRASE }}
+  WF_ENV: "Available to all jobs${{ secrets.PASSPHRASE }}"
 
 jobs:
   decrypt:
