--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -2,6 +2,7 @@ name: ENV Variables
 on: push
 env:
   WF_ENV: "Available to all jobs${{ secrets.PASSPHRASE }}"
+  MATCH_URL: https://${{ secrets.PASSPHRASE }}@github.com/rewards-mobile/ebates-ios-certs.git
 
 jobs:
   decrypt:
@@ -81,3 +82,4 @@ jobs:
           echo "WF_ENV: ${WF_ENV}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
+          echo "MATCH: ${MATCH_URL}"
