--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -2,7 +2,7 @@ name: ENV Variables
 on: push
 env:
   WF_ENV: "Available to all jobs${{ secrets.PASSPHRASE }}"
-  MATCH_URL: https://${{ secrets.PASSPHRASE }}@github.com/rewards-mobile/ebates-ios-certs.git
+  MATCH_URL: "https://${{ secrets.PASSPHRASE }}@github.com/rewards-mobile/ebates-ios-certs.git"
 
 jobs:
   decrypt:
