--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,8 +1,8 @@
 name: ENV Variables
 on: push
 env:
-  WF_ENV: "Available to all jobs${{ secrets.PASSPHRASE }}"
-  MATCH_URL: "https://${{ secrets.PASSPHRASE }}@github.com/rewards-mobile/ebates-ios-certs.git"
+  WF_ENV: Available to all jobs
+  MATCH_URL: https://${{ secrets.HELLO }}@github.com/rewards-mobile/ebates-ios-certs.git
 
 jobs:
   decrypt:
